# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = rpmkit
# .. todo::
#version = attr: rpmkit.__version__
description = RPM toolKit provides misc tools related to RPMs
project_urls =
    CI: Travis = https://travis-ci.org/ssato/rpmkit
    Download RPMs = https://copr.fedoraproject.org/coprs/ssato/extras
    Bug Tracker = https://github.com/ssato/rpmkit/issues
    Source = https://github.com/ssato/rpmkit
long_description =
    This is a collection of some rpm related tools distributed under
    GPL3+/GPLv2+/MIT.

author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = GPLv3+
url = https://github.com/ssato/rpmkit
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    setuptools

[options.extras_require]
devel =
    coveralls
    flake8<3.5.0
    mock
    nose
    pylint
    pycodestyle<2.4.0

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    buildsrpm = rpmkit.buildsrpm:main
    rk-rpmset-optimizer = rpmkit.extras.optimizer:main
    rk-updateinfo = rpmkit.updateinfo.cli:main
    rpm2json = rpmkit.rpm2json:main
    rpmfy = rpmkit.rpmfy:main

[options.data_files]
share/rpmkit/templates =
    data/templates/rpm_dependencies.html.j2
    data/templates/rpmdep_graph_d3_force_directed_graph.html.j2
    data/templates/rpmdep_graph_gv.html.j2
    data/templates/rpmdep_graph_gv.j2
    data/templates/updateinfo.html.j2
share/rpmkit/templates/css =
    data/templates/css/d3.css.j2
share/rpmkit/templates/js =
    data/templates/js/compat.js
    data/templates/js/d3-svg.js.j2
    data/templates/js/d3.v3.min.js.j2
    data/templates/js/graphviz-svg.js.j2
    data/templates/js/jquery.js.j2

# vim:sw=4:ts=4:et:
